--- a/apps/free-billing-app/index.html
+++ b/apps/free-billing-app/index.html
@@ -21,14 +21,15 @@
 		    <div id='navigation'>
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
-					<li><a href="../../apps/index.html">Apps</a></li>
+					<li><a href="../apps/index.html">Apps</a></li>
 					<li><a href="../../plans/index.html">Plans and Pricing</a></li>
+					<li><a href="../../affiliate-program/index.html">Affiliate Program</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="../../articles/index.html">Articles</a></li>
+					<li><a href="https://breeasy.desk.com">Support</a></li>
+					<li><a href="../../about.html">About</a></li>
 					<li><a href="../../opportunities/index.html">Opportunities</a></li>
-					<li><a href="../../about.html">About Breeasy</a></li>
-					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
-					<li><a href="../../apps/login-links.html">Login</a></li>
+					<li><a href="../login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="../../images/feed-24x24.png" alt="rss" width="24" height="24" /></a>
@@ -42,7 +43,7 @@
 		<div id='bd'>
 			<div class="yui-gd"> <!-- 33/67 % split -->
 	    		<div class="yui-u first">
-	    		<h1>Get Paid Faster - It's Easy with this Breeasy App</h1>
+	    		<h1>Get Paid Faster - It's Super Easy with this Breeasy App</h1>
 	    		<h2>Free Billing and Invoicing App</h2>
 	    		<p>As a freelancer, consultant, advisor, entrepreneur, or home-based worker, you don't always have time to create an invoice or bill your customers quickly, efficiently, and accurately.  Now, with the <a href="http://billing.breeasy.com">Free Invoicing and Billing App</a>, you don't have to wait.  You can Create invoices, Record payments, Run reports, and Manage your most important asset:  Cash. Speaking of which, The Billing and Invoice App is totally free!</br>
 	    		Now with <a href="http://www.breeasy.com/apps/free-billing-app/features/time-tracking.html">Time Tracking</a> - Enter your billable hours, then create an Invoice in seconds!</p>
@@ -92,7 +93,7 @@
 	    	
 	   	    	<br>
 				<div id='ft' class="center">
-					<p id='goodbye'>copyright &copy; 2011 - 2012 Breeasy.com</p>
+					<p id='goodbye'>copyright &copy; 2011 - 2013 Breeasy.com</p>
     			</div>
 	    </div>
 	</div>   
