--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Affiliate, White Label, Licensing, Investment and Job Opportunities | Breeasy.com</title>
+	<title>White Label, Licensing, Investment, Jobs | Breeasy.com</title>
 	<meta name="description" content="Earn commissions, license your own version of Breeasy - come work for us.">
 
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
@@ -25,11 +25,12 @@
 					<li><a href="http://www.breeasy.com">Home</a></li>
 					<li><a href="../apps/index.html">Apps</a></li>
 					<li><a href="../plans/index.html">Plans and Pricing</a></li>
+					<li><a href="../affiliate-program/index.html">Affiliate Program</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="../articles/index.html">Articles</a></li>
+					<li><a href="https://breeasy.desk.com">Support</a></li>
+					<li><a href="../about.html">About</a></li>
 					<li><a href="index.html">Opportunities</a></li>
-					<li><a href="../about.html">About Breeasy</a></li>
-					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
 					<li><a href="../apps/login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
@@ -43,10 +44,10 @@
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g">
-			<h1>Opportunities at Breeasy.com</h1>
-			<h2 class='section_header'>Make Breeasy <em>Your</em> Small Business</h2><p>Looking for an interesting, simple, easy, and profitable small business of your own?  Need to maximize your income?  Looking for a part-time opportunity with unlimited upside potential? Know lots of people who are great selling or know lots of freelancers, consultants, or small business owners? Becoming a <a href="http://affiliate.breeasy.com/master-affiliate-signup">Breeasy Master Affiliate</a> is just for you.  You can earn commissions of up to 50% on new paid subscriptions and 40% on paid renewals.  Plus, you can recruit you own sub-affiliates and sales representatives and earn from every subscription <em>they sell</em>.  Some conditions apply.  <a href="http://affiliate.breeasy.com/master-affiliate-earnings-calculator">How Much Can I Earn as a Master Affiliate?</a></p>			
+			<h1>Amazing Opportunities at Breeasy.com</h1>			
 			
-			<h2 class='section_header'>Earn with Breeasy!</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 35% on new paid subscribers and 25% on paid renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details and start earning today.</p>
+			<h2 class='section_header'>Earn with Breeasy!</h2>
+			<p>Have you checked out our <a href="http://www.breeasy.com/affiliate-program/index.html">awesome, easy, and lucrative</a> Affiliate Programs?</p>
 		
 		<h2 class='section_header'>White Label Program</h2>
 		<p>Looking to run your own web business?  Do you have or manage an existing business and are looking to add additional apps and services that add value to your current offerings?  White Label Breeasy could be your answer.</p>
@@ -105,13 +106,13 @@
 			If you are interested and have experience in all the above please email your resume/cv to tobrien@breeasy.com</a>. 
 
 			Thanks and I look forward to hearing from you.</p>
-			<a name="investment">
+			<a name="investment"></a>
 			<h2>Investment and Equity Available</h2>
 			<p>To help us fund our growth both in North America and internationally, a unique opportunity exists for investment in Breeasy.com.  Please contact <a href="http://www.breeasy.com/about.html">Tom O'Brien:</a> via email at tobrien@breeasy.com.</p>
 	    	</div>
 			<br>
 				<div id='ft' class="center">
-					<p id='goodbye'>copyright &copy; 2011 - 2012 Breeasy.com</p>
+					<p id='goodbye'>copyright &copy; 2011 - 2013 Breeasy.com</p>
     			</div>
 	    </div>
 	</div>   
