--- a/plans/index.html
+++ b/plans/index.html
@@ -25,11 +25,12 @@
 					<li><a href="http://www.breeasy.com">Home</a></li>
 					<li><a href="../apps/index.html">Apps</a></li>
 					<li><a href="index.html">Plans and Pricing</a></li>
+					<li><a href="../affiliate-program/index.html">Affiliate Program</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="../articles/index.html">Articles</a></li>
+					<li><a href="https://breeasy.desk.com">Support</a></li>
+					<li><a href="../about.html">About</a></li>
 					<li><a href="../opportunities/index.html">Opportunities</a></li>
-					<li><a href="../about.html">About Breeasy</a></li>
-					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
 					<li><a href="../apps/login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
@@ -79,7 +80,7 @@
 	    		<p>When you signup for a trial account or subscribe to one of the Breeasy for Business plans before March 31st, 2013, you will receive a 50% discount!  Just enter</p>
 	    		<p>Promo Code:
 	    		<b>Early Bird</b> </p>
-	    		<p>to get your discount.  The discount applies to all plans.  The promo code applies to all <a href="http://app.breeasy.com">Risk Free Trial accounts started on or before September 30th, 2012</a>. </p>
+	    		<p>to get your discount.  The discount applies to all plans.  The promo code applies to all <a href="http://app.breeasy.com">Risk Free Trial accounts started on or before December 31, 2012</a>. </p>
 	    		
 	    				    					
 	    		</div>
@@ -93,7 +94,7 @@
 			</div>
 			<br>
 				<div id='ft' class="center">
-					<p id='goodbye'>copyright &copy; 2011 - 2012 Breeasy.com</p>
+					<p id='goodbye'>copyright &copy; 2011 - 2013 Breeasy.com</p>
     			</div>
 	    </div>
 	</div>   
