--- a/apps/breeasy-for-business/features/projects.html
+++ b/apps/breeasy-for-business/features/projects.html
@@ -21,12 +21,13 @@
 					<li><a href="http://www.breeasy.com">Home</a></li>
 					<li><a href="../../../apps/index.html">Apps</a></li>
 					<li><a href="../../../plans/index.html">Plans and Pricing</a></li>
+					<li><a href="../../../affiliate-program/index.html">Affiliate Program</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="../../../articles/index.html">Articles</a></li>
+					<li><a href="https://breeasy.desk.com">Support</a></li>
+					<li><a href="../../../about.html">About</a></li>
 					<li><a href="../../../opportunities/index.html">Opportunities</a></li>
-					<li><a href="../../../about.html">About Breeasy</a></li>
-					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
-					<li><a href="../../../apps/login-links.html">Login</a></li>
+					<li><a href="../../login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../../../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="../../../images/feed-24x24.png" alt="rss" width="24" height="24" /></a>
@@ -70,7 +71,7 @@
 	  <p>Project Management is essential to successful collaboration.  Keeping tasks and meetings related to milestones can get keep you and your team organized.  With Breeasy for Business Standard, you can manage up to 5 projects, with our Deluxe version, the number of active projects is unlimited!  If Project Management is your thing, signup for a <a href="http://app.breeasy.com/signup">Free Account Now!</a> and give it a try for 30 Days. </p>  	
 	   	    	<br>
 				<div id='ft' class="center">
-					<p id='goodbye'>copyright &copy; 2011 - 2012 Breeasy.com</p>
+					<p id='goodbye'>copyright &copy; 2011 - 2013 Breeasy.com</p>
     			</div>
 	    </div>
 	</div>   
