--- a/apps/index.html
+++ b/apps/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Small Business Apps.  CRM, Billing, Management, Time Based Billing | Breeasy.com</title>
+	<title>Small Business Apps CRM, Billing, Management, Time Based Billing | Breeasy.com</title>
 	<meta name="description" content="Breeasy apps are designed by a small business for small business.  Increase your productivity, sales and cash mangement.">
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../css/base-min.css">
@@ -24,11 +24,12 @@
 					<li><a href="http://www.breeasy.com">Home</a></li>
 					<li><a href="index.html">Apps</a></li>
 					<li><a href="../plans/index.html">Plans and Pricing</a></li>
+					<li><a href="../affiliate-program/index.html">Affiliate Program</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="../articles/index.html">Articles</a></li>
+					<li><a href="https://breeasy.desk.com">Support</a></li>
+					<li><a href="../about.html">About</a></li>
 					<li><a href="../opportunities/index.html">Opportunities</a></li>
-					<li><a href="../about.html">About Breeasy</a></li>
-					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
 					<li><a href="login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
@@ -77,7 +78,7 @@
 			</div>
 			<br>
 				<div id='ft' class="center">
-					<p id='goodbye'>copyright &copy; 2011 - 2012 Breeasy.com</p>
+					<p id='goodbye'>copyright &copy; 2011 - 2013 Breeasy.com</p>
     			</div>
 	    </div>
 	</div>   
