lots of changes

--- a/affiliate-program/index.html
+++ b/affiliate-program/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../css/breeasy.css">
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.9.0/build/button/assets/skins/sam/button.css"> 
+
+
 	<link rel="canonical" href="http://www.breeasy.com/affiliate-program" />	
 	</head>
 	<body>
@@ -33,10 +36,12 @@
 					<li><a href="../opportunities/index.html">Opportunities</a></li>
 					<li><a href="../apps/login-links.html">Login</a></li>
 					<li class="last"></li>
-					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
-					<li class="last"><a href="feed://brze.me/feed/"><img src="../images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
+<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a></li>
+<li class="last"><a href="http://www.facebook.com/breeasy"><img src="../images/facebook-24x24.png" alt="rss" width="24" height="24" title="Check out our Facebook page" /></a>
 </li>
+<li class="last"><a href="http://www.linkedin.com/company/breeasy-com"><img src="../images/linkedin-24x24.png" alt="rss" width="24" height="24" title="Breeasy on LinkedIn" /></a>
 </li>
+
 				</ul>
 				
 			</div>
@@ -45,9 +50,14 @@
 		<div id='bd'>
 			<div class="yui-g">
 			<h1>Earn Big $ with our Easy Affiliate Programs</h1>
-			<h2 class='section_header'>Make Breeasy <em>Your</em> Small Business</h2><p>Looking for an interesting, simple, easy, and profitable small business of your own?  Need to maximize your income?  Looking for a part-time opportunity with unlimited upside potential? Know lots of people who are great selling or know lots of freelancers, consultants, or small business owners? Becoming a <a href="http://affiliate.breeasy.com/master-affiliate-signup">Breeasy Master Affiliate</a> is just for you.  You can earn commissions of up to 50% on new paid subscriptions and 40% on paid renewals.  Plus, you can recruit you own sub-affiliates and sales representatives and earn from every subscription <em>they sell</em>.  Some conditions apply.  <a href="http://affiliate.breeasy.com/master-affiliate-earnings-calculator">How Much Can I Earn as a Master Affiliate?</a></p>			
+			<h2 class='section_header'>Make Breeasy Your Small Business - Master Affiliate Program</h2><p>Looking for an interesting, simple, easy, and profitable small business of your own?  Need to maximize your income?  Looking for a part-time opportunity with unlimited upside potential? Know lots of people who are great selling or know lots of freelancers, consultants, or small business owners? Becoming a <a href="http://affiliate.breeasy.com/master-affiliate-signup">Breeasy Master Affiliate</a> is just for you.  You can earn commissions of up to 50% on new paid subscriptions and 40% on paid renewals.  Plus, you can recruit you own sub-affiliates and sales representatives and earn from every subscription <em>they sell</em>.  Some conditions apply.</p>
 			
-			<h2 class='section_header'>Earn with Breeasy!</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 35% on new paid subscribers and 25% on paid renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details and start earning today.</p>
+			<p><a href="http://affiliate.breeasy.com/master-affiliate-earnings-calculator">How Much Can I Earn as a Master Affiliate?</a></p>
+			<p></p><a href="http://affiliate.breeasy.com/master-affiliate-signup">More about being a Master Affiliate</a></p>	
+			
+			<h2 class='section_header'>Earn with Breeasy!  Free Standard Affiliate Program</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 35% on new paid subscribers and up to 25% on all paid renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details and start earning today.</p>
+						<p><a href="http://affiliate.breeasy.com/standard-affiliate-earnings-calculator">How much can a standard affiliate earn?</a></p>
+
 
 				<div id='ft' class="center">
 					<p id='goodbye'>copyright &copy; 2011 - 2013 Breeasy.com</p>
