--- a/apps/index.html
+++ b/apps/index.html
@@ -59,7 +59,7 @@
 	    			<li>Reporting</li>
 	    			<li>And More....</li>
 					</ul>
-					<p>See a complete list of Breeasy for Business features and how each one can <a href="http://www.breeasy.com/apps/breeasy-for-business">save you time and money</a>.<br>  The best way to see all that Breeasy for Business can do is to give it try with our <a href="http://app.breeasy.com/signup">Risk-Free Trial</a>.</p>
+					<p>See a complete list of Breeasy for Small Business features and how each one can <a href="http://www.breeasy.com/apps/small-business">save you time and money</a>.<br>  The best way to see all that Breeasy for Small Business can do is to give it try with our <a href="http://app.breeasy.com/signup">Risk-Free Trial</a>.</p>
 				</div>
 	    		<div class="yui-u">
 	    			<h1>Free Billing, Invoicing, and Time Tracker App</h1>
@@ -72,8 +72,11 @@
 	    			<li>New! Track and Invoice Billable Hours</li>
 					</ul>
 					<p>Not ready for all that Breeasy for Business can do for you?  The Breeasy Billing App is a great way to give us a try <a href="http://billing.breeasy.com">Free, Forever</a>.</p>
-					<p>And, you can read more about the <a href="http://www.breeasy.com/apps/free-billing-app">Free Invoicing, Billing, and Time Tracking App</a>.</p>
-		
+					<p>You can read more about the <a href="http://www.breeasy.com/apps/free-billing-app">Free Invoicing, Billing, and Time Tracking App</a>.</p>
+					<h1>Free Mobile Invoicing App - InstaInvoice</h1>
+					<p>A mobile invoicing app designed for consultants, freelancers, and part-timers on the go, <a href="http://wwww.instainvoice.com">Free Invoicing App</a> is now available for <a href="https://play.google.com/store/apps/details?id=com.breeasy.InstaInvoice">Androidª</a>.  It's easy to use, and synchs with the web-based Free Billing, Invoicing App.  You can create invoices, check customer balances and add contacts.  iOS users, you can access a mobile version of <a href="http://billing.breeasy.com/mobile/index.html">InstaInvoice from in your favorite mobile browser</a></p>
+					
+					
 	    		</div>
 			</div>
 			<br>
