--- a/old_text.html
+++ b/old_text.html
@@ -15,3 +15,8 @@
 			</ul>
 			<p>The right person will receive an equity earn-in position in the company (up to 15% DOE), commissions on company-wide revenue and a base salary upon the company receiving funding (salary amount TBD and DOE). This is an awesome, ground floor opportunity for a self-driven professional to team with an experienced entrepreneur with a track record.</p>  
 			With two live apps, a comprehensive business plan, <a href="http://www.breeasy.com">This is not a typical start-up</a>. This is the start-up opportunity that's got a tremendous start and the one you've been waiting for.
+
+
+<a name="investment"></a>
+			<h2>Investment and Equity Available</h2>
+			<p>To help us fund our growth both in North America and internationally, a unique opportunity exists for investment in Breeasy.com.  Please contact <a href="http://www.breeasy.com/about.html">Tom O'Brien:</a> via email at tobrien@breeasy.com.</p>
