--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>White Label, Licensing, Investment, Jobs | Breeasy.com</title>
+	<title>Affiliate Programs, Jobs, Licensing | Breeasy.com</title>
 	<meta name="description" content="Earn commissions, license your own version of Breeasy - come work for us.">
 
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
@@ -40,60 +40,28 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/opportunities" >Opportunities</a> > Jump: <a href="#jobs">Jobs</a> <a href="#investment">Investment</a></div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/opportunities" >Jobs</a></div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g">
 			<h1>Amazing Opportunities at Breeasy.com</h1>			
 			
-			<h2 class='section_header'>Earn with Breeasy!</h2>
+			<h2 class='section_header'>Earn Big Money with Breeasy!</h2>
 			<p>Have you checked out our <a href="http://www.breeasy.com/affiliate-program/index.html">awesome, easy, and lucrative</a> Affiliate Programs?</p>
 		
-		<h2 class='section_header'>White Label Program</h2>
-		<p>Looking to run your own web business?  Do you have or manage an existing business and are looking to add additional apps and services that add value to your current offerings?  White Label Breeasy could be your answer.</p>
-	        <ul class="features">
-	        <li>Unique Instance of Breeasy for Business (i.e. your-company.breeasy.com or www.yourdomain.com)</li>
-	        <li>Tier 2 support</li>
-	        <li>Software, App, and Server Maintenance Included - low-touch, high margin opportunity</li>
-	        <li>Three ways to white label Breeasy.com apps:</li>
-		        <ol class="sub_list">
-		        <li>Nominal upfront license fee, with ongoing revenue sharing.</li>
-		        <li>Larger upfront license fee, annual license fee based on forecasted volume and nominal monthly maintenance fee.</li>
-		        <li>100% license arrangement - It's all yours to host, manage and support.  We provide updates and custom software work on a quote basis.</li>
-		        </ol>
-	        </ul>
-	        <p>Private Label Breeasy is a great opportunity to run a web-based business without having to be a developer or web expert.  You can be up and running in in as few as <em>two weeks</em>.  Contact us <a href="http://contact.breeasy.com">to start your turnkey web-based business</a> or to discuss private label <a href="http://contact.breeasy.com">opportunities for your existing business</a>.</p>
-	        <h2 class='section_header'>Master Licensing Opportunities</h2>
-	        <p>Perhaps you want to run your own, independent version of Breeasy in a specific country.  Regional Master License Opportunities are currently available the UK, Australia, New Zealand, Canada as well as Europe and Asia.</p>
-	        <p>Or, maybe you manage or are an expert with a certain market segment or vertical that could use a version of Breeasy exclusive for that niche. Industry Vertical Master License Programs are available for most industries such as Personal Trainers, Accountants, Consultants, Developers, and Legal to name a few.</p>
-	        <p>The basics of the Master License Program are:</p>
-		        <ul class="features">
-		        <li>Upfront license fee with recurring per subscription license fees.  Upfront and recurring license fees are based on size of opportunity. Breeasy hosts and maintains your applications.  Licensee can host and maintain if desired.  Licensee provides Tier 1 and Tier 2 support.  Licensee can create own affiliate and sub-licensing arrangements.  Custom Application Design and features are billed on a quote basis.  Upgrades are included.  Each Master License Program is customized with a license fee structure designed to support long-term success for both the Breeasy and the Licensee.</li>
-		       </ul>
-	        <p><a href="http://contact.breeasy.com">Regional and Vertical Industry License Opportunities Available Now</a>.  </p>
-			
-		        <h2 class="section_header">Co-Marketing</h1><p>Have a complementary product or service or a large existing client base or email list?  Looking for revenue opportunities?  We can put together a bespoke program that creates exciting revenue and cross-promotion opportunities.  Please contact us <a href="http://contact.breeasy.com">for more information</a>. </p>
-	        	<a name='jobs'></a>
-		        <h1>Jobs and Consulting</h1>
+			    <a name='jobs'></a>
+		        <h1>Jobs and Consulting Opportunities</h1>
 		     	<h2 class='section_header'>Affiliate Manager</h2>
-		  <p>Breeasy is looking for an experienced Affiliate Manager to oversee our new, improved affiliate program.  The ideal candidate will have experience finding, approving and managing affiliates as well as experience with the tools necessary to create a positive affiliate relationship. Experience with a Affiliate Management system is plus.   </p>
+		  <p>Breeasy is looking for an experienced Affiliate Manager to oversee our new, improved affiliate program.  The ideal candidate will have experience finding, approving, and managing affiliates as well as experience with the tools and personality necessary to create a positive affiliate relationship. Experience with a Affiliate Management system is plus.   </p>
 		        <ul class="list">
 		       	<li>Manage and market to Affiliates</li>
 		        <li>Use social media to attract quality affiliates</li>
 		        <li>Manage affiliate payments</li>
+		        <li>Provide coaching and training</li>
+		        <li>Create and manage affiliate incentive programs (end-user based)</i>
 		        <li>Earn up to 20% of cash revenues.</li>
 		        </ul>
-		  			<h2 class='section_header'>Internet Marketing Specialist</h2>
-		  <p>Breeasy is looking for a skilled marketing specialist to join our team.  This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to acquire trial and paid subscribers via social media marketing, SEO, SEM, blogging and email campaigns.
- </p>
-		        <ul class="list">
-		       	<li>Convert trial to paid at an acceptable conversion level.</li>
-		        <li>Maintain Social Media activities:  Twitter, LinkedIn, Facebook, Blog, Tumblr, YouTube.</li>
-		        <li>Moderate user forum.</li>
-		        <li>Create and manage email campaigns.</li>
-		        <li>Earn up to 20% of cash revenues.</li>
-		        </ul>
-		        <h2 class='section_header'>White Label and Licensing Manager</h2>
+		  		<h2 class='section_header'>White Label and Licensing Manager</h2>
 		        <p>Breeasy is also looking for an experienced sales professional to sell/license its white label product and services. This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to introduce and license breeasy white label to customers interested in our innovative, value-added, opportunity.  Ideal customers are country and regional licensees, affinity organizations and successful internet retailers that sell apps and services to small business.  Secondarily, the ideal candidate will have experience in mail list referral programs.</p>
 		         <ul class="list">
 		       	<li>Use existing contacts and networks</li>
@@ -103,13 +71,7 @@
 		        </ul>
 		        <p>Interested in any of the exciting and ground floor opportunities at Breeasy?  Please email your resume/cv to tobrien@breeasy.com for consideration.  Based on the number of emails, please accept our apologies if we do not respond. </p>
 		    
-			If you are interested and have experience in all the above please email your resume/cv to tobrien@breeasy.com</a>. 
-
-			Thanks and I look forward to hearing from you.</p>
-			<a name="investment"></a>
-			<h2>Investment and Equity Available</h2>
-			<p>To help us fund our growth both in North America and internationally, a unique opportunity exists for investment in Breeasy.com.  Please contact <a href="http://www.breeasy.com/about.html">Tom O'Brien:</a> via email at tobrien@breeasy.com.</p>
-	    	</div>
+				    	</div>
 			<br>
 				<div id='ft' class="center">
 					<p id='goodbye'>copyright &copy; 2011 - 2013 Breeasy.com</p>
