--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="css/breeasy.css">
-	<link rel="canonical" href="http://www.breeasy.com" />	    
+	<link rel="canonical" href="http://www.breeasy.com" />
 	</head>
 	
 	<body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <div id="doc2"class="yui-t7">
     	<div id="app_header">
     	<a href="http://www.breeasy.com"><img src="images/communicate_manage_grow.png" alt="small business management platform" width="400" height="53" /></a>
@@ -34,10 +42,12 @@
 					<li><a href="opportunities/index.html">Opportunities</a></li>
 					<li><a href="apps/login-links.html">Login</a></li>
 					<li class="last"></li>
-					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
-					<li class="last"><a href="feed://brze.me/feed/"><img src="images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
+					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a></li>
+<li class="last"><a href="http://www.facebook.com/breeasy"><img src="images/facebook-24x24.png" alt="rss" width="24" height="24" title="Check out our Facebook page" /></a>
 </li>
+<li class="last"><a href="http://www.linkedin.com/company/breeasy-com"><img src="images/linkedin-24x24.png" alt="rss" width="24" height="24" title="Breeasy on LinkedIn" /></a>
 </li>
+
 				</ul>
 				
 			</div>
@@ -66,13 +76,16 @@
 		        <div class="yui-u first">
 		        <h2 class='section_header' id='first_col'>Simple, Social, Secure</h2>
 		        <p id="first_col">Breeasy.com is the next generation suite of cloud powered apps for managing your contacts, cash, employees, customers and suppliers.<br>
-		        Designed for freelancers, consultants and small business by an <a href="http://www.breeasy.com/about.html">experienced and successful small business consultant and entrepreneur,</a> Breeasy is featured-packed, inexpensive, and community driven.  It's been created for you, by someone just like you - not a bunch of middle managers at a multi-billion dollar corporation that have never been in your shoes.</p>
+		        Designed for freelancers, consultants and small business by an <a href="http://www.breeasy.com/about.html">experienced and successful small business consultant, and entrepreneur,</a> Breeasy is featured-packed, inexpensive, and community driven.  It's been created for you, by someone just like you - not a bunch of middle managers at a multi-billion dollar corporation that have never been in your shoes.</p>
+<div class="fb-like" data-href="http://www.breeasy.com" data-send="false" data-width="450" data-show-faces="false"></div>
 		       </div>
 
 		        <div class="yui-u">
 		       <h2 class='section_header' id='first_col'>It's <em>Easy</em> with Breeasy</h2>
 				<p id="first_col">As a small business, you know how busy your day can be.  We know too, we do it every day.  Breeasy helps us get control of the mountain of emails, calls, prospecting, billing, notes, and appointments.  Everything is now in one place, organized and trackable.  Breeasy can help you get in control, too.  Our <a href="http://www.breeasy.com/apps">productivity, CRM, billing, and time-tracking apps</a>, are available now and we invite you to give them a free try and be sure to let us know what you think.</p>
-								</div>
+				<a href="http://twitter.com/easybreeasy" class="twitter-follow-button" data-show-count="false">Follow @EasyBreeasy</a>
+				<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>    
+				</div>
 				<div class="yui-u">
 				 <h2 class='section_header' id='first_col'>An App For Every Small Business</h2>
 				 <h3>- Free Billing and Invoicing App</h3>
@@ -81,6 +94,8 @@
 				 <h2>Manage Contacts, Projects, and Time</h2>
 				 <h3>- Risk Free Trial - No CC needed</h3>
 				 <a href="http://app.breeasy.com/signup">Signup Now!</a>
+				 <h2>Mobile Invoicing App</h2>
+				 <a href="http://www.instainvoice.com">Free, Simple, Secure</a>
 				</div>
 
 		    </div>
@@ -93,5 +108,7 @@
     		</div>
 		</div>
 	</div>	   
+		
+
 </body>
 </html>
