--- a/affiliate-program/index.html
+++ b/affiliate-program/index.html
@@ -41,28 +41,51 @@
 </li>
 <li class="last"><a href="http://www.linkedin.com/company/breeasy-com"><img src="../images/linkedin-24x24.png" alt="rss" width="24" height="24" title="Breeasy on LinkedIn" /></a>
 </li>
-
-				</ul>
+			</ol>
 				
 			</div>
 			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/affiliate-program" >Affiliate Programs</a></div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g">
-			<h1>Earn Big $ with our Easy Affiliate Programs</h1>
-			<h2 class='section_header'>Make Breeasy Your Small Business - Master Affiliate Program</h2><p>Looking for an interesting, simple, easy, and profitable small business of your own?  Need to maximize your income?  Looking for a part-time opportunity with unlimited upside potential? Know lots of people who are great selling or know lots of freelancers, consultants, or small business owners? Becoming a <a href="http://affiliate.breeasy.com/master-affiliate-signup">Breeasy Master Affiliate</a> is just for you.  You can earn commissions of up to 50% on new paid subscriptions and 40% on paid renewals.  Plus, you can recruit you own sub-affiliates and sales representatives and earn from every subscription <em>they sell</em>.  Some conditions apply.</p>
-			
-			<p><a href="http://affiliate.breeasy.com/master-affiliate-earnings-calculator">How Much Can I Earn as a Master Affiliate?</a></p>
-			<p></p><a href="http://affiliate.breeasy.com/master-affiliate-signup">More about being a Master Affiliate</a></p>	
-			
+			<h1>Earn Big Money with our Super Easy Affiliate Programs</h1>
+			<h2 class='section_header'>Make Breeasy <em>Your</em> Small Business with our Master Affiliate Program</h2><p>Looking for an interesting, simple, easy, and profitable small business of your own?  Need to maximize your income?  Looking for a part-time opportunity with unlimited upside potential? Know lots of people who are great at selling or know lots of freelancers, consultants, or small business owners? Becoming a <a href="http://affiliate.breeasy.com/master-affiliate-signup">Breeasy Master Affiliate</a> is just for you.  You can earn commissions of up to 50% on new paid subscriptions and up to 40% on paid renewals.  Plus, you can recruit you own sub-affiliates and sales representatives and earn from every subscription <em>they sell</em>.  In addition to increased earnings, you have access to an Affiliate Account Executive who is there to help you succeed.  Some conditions apply and please review all</p>
+			</div>
+			<div class="yui-gb">
+				<div class="yui-u first">
+					<p><a href="http://affiliate.breeasy.com/master-affiliate-earnings-calculator">How Much Can I Earn as a Master Affiliate?</a></p>
+				</div>
+				<div class="yui-u">
+					<p><a href="http://affiliate.breeasy.com/master-affiliate-signup">Tell me more about being a Master Affiliate</a></p>	
+				</div>
+				<div class="yui-u">
+					<p><a href="http://affiliate.breeasy.com/mobile/index.html">New! Mobile Affiliate Management</a></p>
+				</div>
+			</div>
+			<div class="yui-g">
 			<h2 class='section_header'>Earn with Breeasy!  Free Standard Affiliate Program</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 35% on new paid subscribers and up to 25% on all paid renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details and start earning today.</p>
-						<p><a href="http://affiliate.breeasy.com/standard-affiliate-earnings-calculator">How much can a standard affiliate earn?</a></p>
+
+		    </div>	
+		    <div class="yui-gb">
+				<div class="yui-u first">
+					<p><a href="http://affiliate.breeasy.com/standard-affiliate-earnings-calculator">How much can I earn as a Standard Affiliate?</a></p>
+				</div>
+				<div class="yui-u">
+					<p><a href="http://affiliate.breeasy.com/standard-affiliate-signup">Start my Free Affiliate Membership</a></p>
+				</div>
+				<div class="yui-u">
+				</div>
+			</div>
+			<div class="yui-g">
+				<h2>Low Pressure Sales</h2>
+				<p>No matter which affiliate program you choose, there are no high pressure sales gimmicks, crazy minimums, or pre-purchase of subscriptions that you must then sell.  At Breeasy, we believe in FREE, as in Free to try.  Some of our apps are completely free.  Our programs allow for your users to sign up for one of the apps, either free or trial, use your affiliate/referral code, and upgrade to one of our paid subscriptions when ready.  Your affiliate code stays with the user always and each affiliate member gets credit for all upgrades.</p>
+			</div>	
 
 
 				<div id='ft' class="center">
 					<p id='goodbye'>copyright &copy; 2011 - 2013 Breeasy.com</p>
     			</div>
-	    </div>
 	</div>   
+</div>
 </body>
 </html>
