--- a/index.html
+++ b/index.html
@@ -88,15 +88,11 @@
 				</div>
 				<div class="yui-u">
 				 <h2 class='section_header' id='first_col'>An App For Every Small Business</h2>
-				 <h3>- Free Billing and Invoicing App</h3>
-				 <h3>- Track Billable Time</h3>
-				  <a href="http://billing.breeasy.com/users/sign_up">Start getting paid faster!</a>
-				 <h2>Manage Contacts, Projects, and Time</h2>
-				 <h3>- Risk Free Trial - No CC needed</h3>
-				 <a href="http://app.breeasy.com/signup">Signup Now!</a>
-				 <h2>Mobile Invoicing App</h2>
-				 <a href="http://www.instainvoice.com">Free, Simple, Secure</a>
-				</div>
+				 <p>Whether you have an established small business or just getting started consulting or freelancing, there is a Breeasy App for you.</p>
+				  <a href="http://billing.breeasy.com/users/sign_up"><strong>Breeasy Billing, Invoicing, and Time Tracker</strong></a> is a free, web-based app that is designed for single person businesses.  You can bill anything, such as consulting or design services and track your hourly time and convert them into invoices.<br>
+				  <a href="http://www.instainvoice.com"><strong>InstaInvoice Free Mobile Billing</strong></a> is the companion mobile app to the Breeasy Billing App.  It gives you the power to invoice right from your phone or tablet.  Available as an Android app or a mobile site, it synchs with the web version.<br>
+					<a href="http://app.breeasy.com"><strong>Breeasy for Small Business</strong></a> is our flagship, full-featured web app.  It can help manage customers, employees or contractors, suppliers, projects, to dos, tasks, events and more.  You can use as much or as little of it as you need.  Free Trial Now Available.
+				 				</div>
 
 		    </div>
 <blockquote>"I designed and built the Breeasy small business management and billing, time-tracking apps because as a small business owner and technology consultant, I couldn't find anything that met my needs.  So, I built them myself.  Foremost, they needed to have a ton of features, be simple and easy to use, a strong community, and provide real value to its users both in utility and price. Now, I use them everyday."<br>
