--- a/plans/index.html
+++ b/plans/index.html
@@ -44,9 +44,9 @@
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g"> <!-- 50/50 % split -->
-			<h1>Get Organized and Save Time with The Easy to Use, Small Business App</h1>
+			<h1>Get Organized and Save Time with The Easy to Use, Small Business Management App</h1>
 	    		<div class="yui-u first">
-	    			<p>There are two plans available with Breeasy for Business:  Standard and Deluxe.  Standard should be perfect for most small businesses, while Deluxe is suitable for larger companies and includes priority support*.</p>
+	    			<p>There are two plans available with Breeasy for Small Business:  Standard and Deluxe.  Standard should be perfect for most small businesses, while Deluxe is suitable for larger companies and includes priority support*.</p>
 	    			<table class="plans">
 					<tbody>
 					<thead><th>Feature</th><th>Standard</th><th>Deluxe</th></thead>
@@ -77,10 +77,10 @@
 	    		<p>Great!  The easiest way to purchase a plan is by first signing-up for a  <a href="http://app.breeasy.com/signup">Risk-Free Trial</a> Account.  After you signup, or if you currently have an account, you can purchase a plan right from within the application.  Just click the Account Home link on the top right-hand of every page. 
 	    		<img class="hero border" src="../images/purchase_plans.png" alt="how-to-purchase" width="273" height="125" /></p>
 	    		<h2 class='section_header'>Save 50% with our Early Bird Special!</h2>
-	    		<p>When you signup for a trial account or subscribe to one of the Breeasy for Business plans before March 31st, 2013, you will receive a 50% discount!  Just enter</p>
+	    		<p>When you signup for a trial account or subscribe to one of the Breeasy for Business plans before April 30, 2013, you will receive a 50% discount!  Just enter</p>
 	    		<p>Promo Code:
 	    		<b>Early Bird</b> </p>
-	    		<p>to get your discount.  The discount applies to all plans.  The promo code applies to all <a href="http://app.breeasy.com">Risk Free Trial accounts started on or before December 31, 2012</a>. </p>
+	    		<p>to get your discount.  The discount applies to all paid plans.  The promo code applies to all <a href="http://app.breeasy.com">Risk Free Trial accounts started on or before March 31, 2013</a>. </p>
 	    		
 	    				    					
 	    		</div>
