updates to links

--- a/apps/breeasy-for-business/features/lists.html
+++ b/apps/breeasy-for-business/features/lists.html
@@ -29,10 +29,11 @@
 					<li><a href="../../../opportunities/index.html">Opportunities</a></li>
 					<li><a href="../../login-links.html">Login</a></li>
 					<li class="last"></li>
-					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../../../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
-					<li class="last"><a href="feed://brze.me/feed/"><img src="../../../images/feed-24x24.png" alt="rss" width="24" height="24" /></a>
-</li>
-</li>
+					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../../../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a></li>
+					<li class="last"><a href="http://www.facebook.com/breeasy"><img src="../../../images/facebook-24x24.png" alt="rss" width="24" height="24" title="Check out our Facebook page" /></a>
+					</li>
+					<li class="last"><a href="http://www.linkedin.com/company/breeasy-com"><img src="../../../images/linkedin-24x24.png" alt="rss" width="24" height="24" title="Breeasy on LinkedIn" /></a>
+					</li>
 				</ul>
 				
 			</div>
