--- a/which-version-of-Breeasy-is-right-for-me.html
+++ b/which-version-of-Breeasy-is-right-for-me.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Small Business Management Portal | Breeasy.com</title>
-	<meta name="description" content="Founded by a successful small business owner, Breeasy.com is a small business platform and community.">
+	<title>Which Version of Breeasy is Right for Me?</title>
+	<meta name="description" content="">
 	
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="css/base-min.css">
@@ -38,24 +38,25 @@
 </li>
 <li class="last"><a href="http://www.linkedin.com/company/breeasy-com"><img src="images/linkedin-24x24.png" alt="rss" width="24" height="24" title="Breeasy on LinkedIn" /></a>
 </li>
+
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > About Breeasy</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/which-version-of-Breeasy-is-right-for-me.html">About Breeasy</a></div>
 		</div> <!-- hd -->
 		<div id="bd">
 		<div id="yui-main">
 			<div class="yui-b">
 				<div class="yui-g">
 				<h1>Small Business Focused</h1>
-				<p>Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien after years of research and development.  Tom is  founder and chief consultant at
-				BootStrap Technology Consulting.  Tired of CRM systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Global COO of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://www.bootstraptechnology.com/about.html">CV/Resume</a>.</p>
+				<p>Breeasy is a small business management platform, consisting of apps, forums, blog, and peers that can help your small business grow.  Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien, a technology consultant, after years of research and development.  Tired of CRM and billing systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Director of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.</p>
 				<h2>FeedBack</h2>
 				Importantly, we want to hear your <a href="https://breeasy.desk.com">feedback and listen to your suggestions</a> in our forums.
 				<h2>Contact Us</h2>
 				Got a question or some interest in Breeasy.com opportunities? Drop us a line and ask us:  <a href="http://contact.breeasy.com">How can we help?</a>.
-				<h2>The Breeasy Blog</h2>
-				Keep up with the latest on Breeasy apps, tips and tricks, trends in small business and user stories on <a href="http://www.brze.me">The Breeasy Blog</a>.
+				<h2>The Breeasy Blog - We love Small Business</h2>
+				Keep up with the latest on Breeasy apps, tips and tricks, trends in small business and user stories on <a href="http://www.brze.me">We Love Small Business</a>.
+				<h2>100% designed, coded, built, and hosted in the USA. - Never outsourced.</h2>
 				<h2>Follow us on Twitter</h2>
 				<a href="http://twitter.com/easybreeasy" class="twitter-follow-button" data-show-count="false">
 				
