--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li><a href="apps/index.html">Apps</a></li>
 					<li><a href="plans/index.html">Plans and Pricing</a></li>
 					<li><a href="affiliate-program/index.html">Affiliate Program</a></li>
-					<li><a href="http://brze.me">Blog</a></li>
+					<li><a href="http://blog.breeasy.com">Blog</a></li>
 					<li><a href="articles/index.html">Articles</a></li>
 					<li><a href="https://breeasy.desk.com">Support</a></li>
 					<li><a href="about.html">About</a></li>
